<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="input_data">As1RVMTApplication</string>
    <string name="final_scores">As1RVMTApplication</string>
    <string name="action_settings">Settings</string>
    <string name="name">Student Name</string>
	<string name="asg1">Assignment 1</string>
	<string name="asg2">Assignment 2</string>
	<string name="asg3">Assignment 3</string>
	<string name="t1">Test 1</string>
	<string name="t2">Test 2</string>
	<string name="t3">Test 3</string>
	<string name="compute">Compute</string>
	<string name="clear">Clear</string>
	<string name="finalrep">Final Scores Report</string>
	<string name="exit">Exit</string>
	<string name="summ">Summary Report</string>
	<string name="numofstuds">Number of Students</string>
	<string name="passing">Number of Passing Scores</string>
	<string name="invalid">Number of Invalid Scores</string>
	<string name="grpavg">Group Average</string>
	<string name="best">Best Students</string>
	
	<string name="fscore">Final Score</string>
	<string name="letters">In Letters</string>
</resources>
