<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/asg1" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/asg2" />

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/asg3" />

        <EditText
            android:id="@+id/EditText03"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

</TableLayout>